[package]
name = "aurora-engine-utils"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
tsify = { version = "0.4", features = ["js"] }

aurora-engine-transactions = "1.1.0"
aurora-engine-types = "1.1.0"
getrandom = { version = "0.2.15", features = ["js"] } # Required by aurora-engine-types

[build-dependencies]
wasm-pack = "0.13.0"